Uploading changes made to website
done

--- a/index.html
+++ b/index.html
@@ -4,6 +4,15 @@
         <link rel="stylesheet" href="scripts/css/style.css">
     </head>
     <body>
-        <h1>Welcome to my Webpage!</h1>
+          
+        <div id="box1" class="box"> 
+            <h1>Welcome to my Webpage!</h1>
+            <div id="box2" class="box"> </div>
+            
+        </div>   
+        </div>
+
+
+ 
     </body>
 </html> 
