Commit changes to website
finsih commiting

--- a/projects.html
+++ b/projects.html
@@ -1,4 +1,3 @@
-
 <html>
     <head>
         <title>Home</title>
@@ -14,8 +13,8 @@
                     <span class="subtitle" class= "nav">Delaware Area Career Center</span><br>
                     <span class="maintitle" class= "nav">Application Development & Programming</span><br>
                     <a href="index.html" class= "nav">Home</a>&nbsp; | &nbsp;
-                    <a href="projects.html" class= "nav">Projects</a>&nbsp; | &nbsp;
-                    <a href="skills.html" class= "nav">Skills</a>&nbsp; | &nbsp;
+                    <a href="projects.html" class= "nav">>Projects</a>&nbsp; | &nbsp;
+                    <a href= "skills.html" slass= "nav">Skills</a>&nbsp; | &nbsp;
                     <a href="hobbies.html" class= "nav">Hobbies</a>&nbsp; | &nbsp;
                 </td>
             </tr>
