--- a/projects.html
+++ b/projects.html
@@ -1,9 +1,12 @@
++
+<!DOCTYPE html>
 <html>
     <head>
-        <title>Home</title>
+        <title>Projects Page</title>
         <link rel="stylesheet" href="scripts/css/style.css">
     </head>
     <body>
+        <div id="page_wrapper">
         <table>
             <tr>
                 <td>
@@ -13,11 +16,16 @@
                     <span class="subtitle" class= "nav">Delaware Area Career Center</span><br>
                     <span class="maintitle" class= "nav">Application Development & Programming</span><br>
                     <a href="index.html" class= "nav">Home</a>&nbsp; | &nbsp;
-                    <a href="projects.html" class= "nav">>Projects</a>&nbsp; | &nbsp;
-                    <a href= "skills.html" slass= "nav">Skills</a>&nbsp; | &nbsp;
-                    <a href="hobbies.html" class= "nav">Hobbies</a>&nbsp; | &nbsp;
+                    <a href="projects.html" class= "nav">Projects</a>&nbsp; | &nbsp;
+                    <a href="skills.html" class= "nav">Skills</a>&nbsp; | &nbsp;
+                    <a href="hobbies.html" class= "nav">Hobbies</a>
                 </td>
             </tr>
         </table>
+        <span class="font1">My Projects</span>
+        <br><br>
+        On This Page I will be explaining my projects!
+        <br><br>
+        </div>
     </body>
 </html> 
