--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
-
++
+<!DOCTYPE html>
 <html>
     <head>
         <title>Home</title>
         <link rel="stylesheet" href="scripts/css/style.css">
     </head>
     <body>
+        <div id="page_wrapper">
         <table>
             <tr>
                 <td>
@@ -16,9 +18,14 @@
                     <a href="index.html" class= "nav">Home</a>&nbsp; | &nbsp;
                     <a href="projects.html" class= "nav">Projects</a>&nbsp; | &nbsp;
                     <a href="skills.html" class= "nav">Skills</a>&nbsp; | &nbsp;
-                    <a href="hobbies.html" class= "nav">Hobbies</a>&nbsp; | &nbsp;
+                    <a href="hobbies.html" class= "nav">Hobbies</a>
                 </td>
             </tr>
         </table>
+        <span class="font1">Welcome to Landon Dicke's Website :)</span>
+        <br><br>
+        On This Website there will be my hobbies, my skills, my projects, and activities, I hope you enjoy.
+        <br><br>
+        </div>
     </body>
 </html> 
