--- a/skills.html
+++ b/skills.html
@@ -31,6 +31,9 @@
             <li>Cooking. Cooking is fun for me, I have been cooking for about 4 years and my favorite things to make are cookies and pasta.</li>
             <li>Another one of my skills os playing video games. I play games for probably 2 or 3 hours a day, thats's how much i enjoy them.</li>
         </ol>
+        <table class="table1">
+
+        </table>
         </div>
     </body>
 </html> 
