--- a/index.html
+++ b/index.html
@@ -26,6 +26,17 @@
         <br><br>
         On This Website there will be my hobbies, my skills, my projects, and activities, I hope you enjoy.
         <br><br>
+        <fieldset>
+            <legend>About Me</legend>
+            My name is <span class="standout">Landon Carter Dicke</span>. I was born in Columbus, Ohio on July 14th 2005.
+            At the time we where living in Delaware Ohio and we still are to this day, I just was born at St. Mary's Hospital.
+            Before I was at the Career Center I was attending and still attending Delaware Hayes High School.
+            At Hayes Highschool I participated in Band, Choir, and Golf. I only do golf now because of the schedule coming to DACC.
+            Some of my favorite things to do is play Golf, Video Games, and watching the Ohio State Buckeyes football team, I really also like to bake things.
+            My favorite games to play is Cold War, Terreria, and ROBLOX when im really bored.
+            My favorite type of music is Rap Music. I like pop smoke, juice wrld, and techn9ne.
+            That's all that I know what to share about myself.
+        </fieldset>
         </div>
     </body>
 </html> 
