major changes to website
commit changes

--- a/hobbies.html
+++ b/hobbies.html
@@ -26,6 +26,14 @@
         <br><br>
         I will be explaining what my favorite hobbies are!
         <br><br>
+        <ol>
+            <li>Golf. Golf is a lot harder then what people think it is but i really enjoy playing it, I am somewhat skilled at</li>
+            <li>Cooking. Cooking is fun for me, I have been cooking for about 4 years and my favorite things to make are cookies and pasta.</li>
+            <li>Another one of my skills os playing video games. I play games for probably 2 or 3 hours a day, thats's how much i enjoy them.</li>
+        </ol>
+        <table class="table1">
+        <img src="images/golf.jpg" width="1000px">
+        <img src="images/cream-tomato-rigatoni-FT-RECIPE1020.jpg" width="550px">
         </div>
     </body>
 </html> 
