--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <br><br>
         On This Website there will be my hobbies, my skills, my projects, and activities, I hope you enjoy.
         <br><br>
-        <fieldset>
+        <fieldset style="width: 50%; background-color: lightcoral;">
             <legend>About Me</legend>
             My name is <span class="standout">Landon Carter Dicke</span>. I was born in Columbus, Ohio on July 14th 2005.
             At the time we where living in Delaware Ohio and we still are to this day, I just was born at St. Mary's Hospital.
@@ -37,6 +37,8 @@
             My favorite type of music is Rap Music. I like pop smoke, juice wrld, and techn9ne.
             That's all that I know what to share about myself.
         </fieldset>
+        <img src="images/ocean.png">
+        <img src="images/6b161109-5538-43d7-be1d-9c5baf6e00b1.gif">
         </div>
     </body>
 </html> 
