major changes to website
commit changes

--- a/hobbies.html
+++ b/hobbies.html
@@ -16,7 +16,7 @@
                     <span class="subtitle" class= "nav">Delaware Area Career Center</span><br>
                     <span class="maintitle" class= "nav">Application Development & Programming</span><br>
                     <a href="index.html" class= "nav">Home</a>&nbsp; | &nbsp;
-                    <a href="projects.html" class= "nav">Projects</a>&nbsp; | &nbsp;
+                    <a href="projects.html" class= "nav">School</a>&nbsp; | &nbsp;
                     <a href="skills.html" class= "nav">Skills</a>&nbsp; | &nbsp;
                     <a href="hobbies.html" class= "nav">Hobbies</a>
                 </td>
