--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                     <span class="subtitle" class= "nav">Delaware Area Career Center</span><br>
                     <span class="maintitle" class= "nav">Application Development & Programming</span><br>
                     <a href="index.html" class= "nav">Home</a>&nbsp; | &nbsp;
-                    <a href="projects.html" class= "nav">Projects</a>&nbsp; | &nbsp;
+                    <a href="projects.html" class= "nav">School</a>&nbsp; | &nbsp;
                     <a href="skills.html" class= "nav">Skills</a>&nbsp; | &nbsp;
                     <a href="hobbies.html" class= "nav">Hobbies</a>
                 </td>
@@ -24,7 +24,7 @@
         </table>
         <span class="font1">Welcome to Landon Dicke's Website :)</span>
         <br><br>
-        On This Website there will be my hobbies, my skills, my projects, and activities, I hope you enjoy.
+        On This Website there will be my hobbies, my skills, my school, and skills/hobbies I hope you enjoy.
         <br><br>
         <fieldset style="width: 50%; background-color: lightcoral;">
             <legend>About Me</legend>
