--- a/projects.html
+++ b/projects.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Projects Page</title>
+        <title>School Page</title>
         <link rel="stylesheet" href="scripts/css/style.css">
     </head>
     <body>
@@ -16,16 +16,25 @@
                     <span class="subtitle" class= "nav">Delaware Area Career Center</span><br>
                     <span class="maintitle" class= "nav">Application Development & Programming</span><br>
                     <a href="index.html" class= "nav">Home</a>&nbsp; | &nbsp;
-                    <a href="projects.html" class= "nav">Projects</a>&nbsp; | &nbsp;
+                    <a href="projects.html" class= "nav">School</a>&nbsp; | &nbsp;
                     <a href="skills.html" class= "nav">Skills</a>&nbsp; | &nbsp;
                     <a href="hobbies.html" class= "nav">Hobbies</a>
                 </td>
             </tr>
         </table>
-        <span class="font1">My Projects</span>
+        <span class="font1">School :)</span>
         <br><br>
-        On This Page I will be explaining my projects!
+        On This Page I will be telling you where i go to school.
         <br><br>
+        <fieldset style="width: 50%; background-color: rgb(78, 218, 187);">
+            <legend>Schools</legend>
+            I attend Delaware Hayes Highschool. I got the offer to attend here at the end of my Sophomore year when they said I could get in the App Development and Programming Program.
+            I said that I would love to attend this school and I will attend DACC and Hayes for the rest of my Junior and Senior year. This is a great opportunity and I believe That
+            if you get the chance to come to DACC to learn a trade I would do it in a heart beat.
+        </fieldset>
+        <img src="images/6b161109-5538-43d7-be1d-9c5baf6e00b1.gif" width="400px">
+        <img src="images/DACC_logotype_blueRGB_NoTagline_400x400.jpg" width="315px">
         </div>
+        <br><br><br><br><br><br>
     </body>
 </html> 
