--- a/skills.html
+++ b/skills.html
@@ -16,7 +16,7 @@
                     <span class="subtitle" class= "nav">Delaware Area Career Center</span><br>
                     <span class="maintitle" class= "nav">Application Development & Programming</span><br>
                     <a href="index.html" class= "nav">Home</a>&nbsp; | &nbsp;
-                    <a href="projects.html" class= "nav">Projects</a>&nbsp; | &nbsp;
+                    <a href="projects.html" class= "nav">School</a>&nbsp; | &nbsp;
                     <a href="skills.html" class= "nav">Skills</a>&nbsp; | &nbsp;
                     <a href="hobbies.html" class= "nav">Hobbies</a>
                 </td>
@@ -25,6 +25,14 @@
         <span class="font1">My Skills</span>
         <br><br>
         On this Page I will explain my skills/things I am really good at
+        <ol>
+            <li>HTML. I can some what script HTML and make a website with it</li>
+            <li>CSS. This is what we used to create our website amd our pages.</li>
+            <li>Java. I know some Java since i have worked on it at home during the summer, i still dont fully understand the launguage yet.</li>
+        </ol>
+        <img src="images/171-1718034_logo-de-java-script-hd-png-download.png">
+        <img src="images/html-logo-600w-452205691.jpg"width="270px">
+        <img src="images/css.png"width="270px">
         </table>
         </div>
     </body>
